--- a/crisis-app-demo/package.json
+++ b/crisis-app-demo/package.json
@@ -15,7 +15,8 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-multiselect": "^2.1.6"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-pro": "^5.12.0",
