--- a/.github/workflows/publish-master.yml
+++ b/.github/workflows/publish-master.yml
@@ -11,14 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
     - uses: actions/checkout@master
     - name: Install
       uses: CultureHQ/actions-yarn@master
       with:
         args: install
     - name: list dir
-      run: ls -alR
+      run: |
+        pwd
+        ls -alR
     - name: Build
       uses: CultureHQ/actions-yarn@master
       with:
